--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   /*background: linear-gradient(135deg, #4e54c8, #8f94fb);*/
   background: url("../employee management/crud\ image.jpeg");
   background-repeat: no-repeat;
